# RustBot

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.Secrets.toml  run.sh
.github/workflows/: docker-build-push.yml
data/: example.Secrets.toml  rustbot.sqlite
data/migrations/: 20251111020239_trade_log_table.sql  20251111174045_shop_table.sql
migrations/: 20210906145552_initial_migration.sql  initial_migration.sql
src/: Dockerfile  bot_types.rs  bot_utils.rs  emoji.rs  main.rs
src/commands/: judge.rs  me.rs  mod.rs  ping.rs  score.rs  shop.rs  smash.rs  top.rs  trade.rs  voice_commands.rs
