[package]
name = "RustBot"
version = "0.3.0"
authors = ["Tim Hillier tim.r.hillier@gmail.com"]
edition = "2021"

[dependencies]
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "standard_framework", "framework", "utils", "voice"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.188", features = ["derive"]}
toml = "0.8.2"
error = "0.1.9"
context = "3.0.0"
rand = "0.8.5"
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "tls-rustls", "sqlite"] }
songbird = {git = "https://github.com/serenity-rs/songbird.git", branch = "current", features = ["builtin-queue"]}
#songbird = {version = "0.3.2"}