[package]
name = "RustBot"
version = "0.4.0"
authors = ["Tim Hillier tim.r.hillier@gmail.com"]
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "standard_framework", "framework", "utils", "voice"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.188", features = ["derive"]}
toml = "0.9.8"
rand = "0.9.2"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "tls-rustls", "sqlite"] }
poise = "0.6.1"